feat: convert lesson dropdown to documentation selector with updated titles and content

--- a/index.html
+++ b/index.html
@@ -114,22 +114,23 @@
       </label>
     </div>
 
-    <!-- LESSONS BAR -->
+    <!-- DOCUMENTATION BAR -->
     <div id="lessonPanel">
-      <label for="lessonSelect" style="color: var(--text-muted); font-weight: 500">Lesson:</label>
+      <label for="lessonSelect" style="color: var(--text-muted); font-weight: 500">Documentation:</label>
       <select id="lessonSelect">
-        <option value="1">Lesson 1: Basic Spike Dynamics</option>
-        <option value="2">Lesson 2: Synaptic Transmission</option>
-        <option value="3">Lesson 3: Network Plasticity</option>
-        <option value="4">Lesson 4: Pattern Recognition</option>
-        <option value="5">Lesson 5: Network Topology</option>
-        <option value="6">Lesson 6: Inhibition & Competition</option>
-        <option value="7">Lesson 7: Multi-layer Processing</option>
-        <option value="8">Lesson 8: Memory Systems</option>
-        <option value="9">Lesson 9: Large-Scale Networks</option>
-        <option value="10">Lesson 10: Neural Oscillations</option>
-        <option value="11">Lesson 11: Brain Emulation Theory</option>
-        <option value="12">Lesson 12: Ethics & Future</option>
+        <option value="">Select documentation…</option>
+        <option value="1">Documentation 1 · Project Overview &amp; Goals</option>
+        <option value="2">Documentation 2 · Quick Start &amp; Environment Setup</option>
+        <option value="3">Documentation 3 · Interface Tour</option>
+        <option value="4">Documentation 4 · Controls &amp; Parameter Panel</option>
+        <option value="5">Documentation 5 · Neuron Taxonomy &amp; Glyph Dictionary</option>
+        <option value="6">Documentation 6 · Brain Regions &amp; Template Library</option>
+        <option value="7">Documentation 7 · Simulation Pipeline &amp; Runtime</option>
+        <option value="8">Documentation 8 · Importing &amp; Exporting Atlas Data</option>
+        <option value="9">Documentation 9 · Neuron Inspector &amp; Analytics</option>
+        <option value="10">Documentation 10 · Advanced Configuration &amp; Manifest</option>
+        <option value="11">Documentation 11 · Troubleshooting &amp; Verification</option>
+        <option value="12">Documentation 12 · Glossary &amp; Further Resources</option>
       </select>
     </div>
 
